--- a/public/locale/de/common.json
+++ b/public/locale/de/common.json
@@ -7,6 +7,7 @@
   "all": "alle",
   "alls": "alle",
   "allSelected": "alle Bohrungen ausgewählt",
+  "alternate_name": "Alternativer Name",
   "andzoom": "...und zoomen",
   "appearance": "Erscheinungsbild",
   "appearanceBigMap": "Große Karte",
@@ -29,6 +30,8 @@
   "cancel": "Abbrechen",
   "canton": "Kanton",
   "casing": "Verrohrung",
+  "casing_inner_diameter": "Verrohrung Innendurchmesser [mm]",
+  "casing_outer_diameter": "Verrohrung Aussendurchmesser [mm]",
   "casingId": "Verrohrungs ID",
   "casingName": "Name der Verrohrung",
   "centerselected": "auf Auswahl zentrieren",
@@ -57,7 +60,6 @@
   "deletelayer": "Bestehende Schicht löschen",
   "deletelayerconfirmation": "Sie löschen diese Schicht. Wie wollen Sie fortfahren?",
   "deleting": "{{what}} löschen",
-  "lithological_description": "Lithologische Beschreibung",
   "details": "Einzelheiten",
   "disable": "Deaktivieren",
   "disabled": "Deaktiviert",
@@ -105,6 +107,7 @@
   "exportInProgress": "Export in Bearbeitung",
   "extendlower": "Untere Schicht zum Top ausdehnen",
   "extendupper": "Obere Schicht nach unten ausdehnen",
+  "facies_description": "Fazielle Beschreibung",
   "filling": "Hinterfüllung",
   "filterByHierarchicalUnits": "Nach hierarchischen Einheiten filtern",
   "filterbymap": "Mit Karteausschinitt filtern",
@@ -120,6 +123,7 @@
   "fromelevation": "von Höhe",
   "fromMeters": "von [m]",
   "german": "Deutsch",
+  "gradation": "Abstufung",
   "groundwater": "Grundwasser",
   "header_borehole": "Bohrloch Editor",
   "header_check": "In Bearbeitung",
@@ -163,15 +167,17 @@
   "layer_consistance": "Konsistenz",
   "layer_creation_fetch": "Bereite neue Schicht vor..",
   "layer_debris": "Grobbestandteile",
-  "facies_description": "Fazielle Beschreibung",
+  "layer_depth": "Schichttiefe MD [m]",
+  "layer_depth_from": "Top MD [m]",
+  "layer_depth_to": "Basis MD [m]",
   "layer_grain_granularity": "Kornrundung",
   "layer_grain_shape": "Kornform",
   "layer_grain_size_1": "Korngrösse 1",
   "layer_grain_size_2": "Korngrösse 2",
   "layer_humidity": "Feuchtigkeit",
   "layer_last": "Bohrlochende",
-  "layer_lithology_top_bedrock": "Lithologie Grobbestandteile",
   "layer_lithology": "Lithologie",
+  "layer_lithology_top_bedrock": "Lithologie Grobbestandteile",
   "layer_lithostratigraphy": "Lithostratigraphie",
   "layer_loading_fetch": "Lade Schicht..",
   "layer_notes": "Anmerkungen",
@@ -185,9 +191,7 @@
   "layer_uscs_3": "USCS 3",
   "layer_uscs_determination": "USCS Bestimmungmethode",
   "layer_uscs_original": "USCS Originalklassification",
-  "layer_depth": "Schichttiefe MD [m]",
-  "layer_depth_from": "Top MD [m]",
-  "layer_depth_to": "Basis MD [m]",
+  "lithological_description": "Lithologische Beschreibung",
   "lithology_top_bedrock": "Lithologie Top Fels",
   "lithostratigraphy_top_bedrock": "Lithostratigraphie Top Fels",
   "load": "Laden",
@@ -235,15 +239,17 @@
   "previousVersions": "Frühere Versionen",
   "project_name": "Projektname",
   "public": "Öffentlich",
-  "alternate_name": "Alternativer Name",
   "publication": "Veröffentlichung",
   "publish": "Veröffentlichen",
   "purpose": "Bohrzweck",
   "qt_bore_inc_dir": " Inc. / Richtung Genauigkeit",
-  "qt_elevation": "+/- Ansatzhöhe OKT [m]",
   "qt_depth": "+/- Endteufe MD [m]",
+  "qt_elevation": "+/- Ansatzhöhe OKT [m]",
   "qt_location": "+/- Koordinaten [m]",
   "qt_top_bedrock": "+/- Top Fels MD [m]",
+  "reference_elevation": "Referenz Ansatzhöhe [m.ü.M.]",
+  "reference_elevation_qt": "+/- Referenz Ansatzhöhe [m]",
+  "reference_elevation_type": "Referenz Ansatzhöhe Typ",
   "refresh": "Aktualisieren",
   "reject": "Ablehnen",
   "rejected": "Abgelehnt",
@@ -268,6 +274,7 @@
   "showallfields": "Alle Felder anzeigen",
   "showHistory": "Verlauf anzeigen",
   "someSelected": "{{howMany}} Bohrungen ausgewählt",
+  "spud_date": "Bohrbeginn",
   "srs": "Räumliches Bezugssystem",
   "start": "Diese Seite ist auf Deutsch.",
   "status": "Status",
@@ -291,6 +298,10 @@
   "toelevation": "bis Höhe",
   "toMeters": "bis [m]",
   "top_bedrock": "Top Fels MD [m]",
+  "top_bedrock_tvd": "Top Fels TVD [m]",
+  "top_bedrock_tvd_qt": "+/- Top Fels TVD [m]",
+  "total_depth_tvd": "Endteufe TVD [m]",
+  "total_depth_tvd_qt": "+/- Endteufe TVD [m]",
   "totaldepth": "Bohrendteufe MD [m]",
   "type": "Typ",
   "updateDate": "Bearbeitungsdatum",
@@ -308,16 +319,5 @@
   "workgroup": "Arbeitsgruppe",
   "yes": "Ja",
   "you": "Du",
-  "yourcomments": "Ihre Kommentare",
-  "spud_date": "Bohrbeginn",
-  "total_depth_tvd": "Endteufe TVD [m]",
-  "total_depth_tvd_qt": "+/- Endteufe TVD [m]",
-  "reference_elevation": "Referenz Ansatzhöhe [m.ü.M.]",
-  "reference_elevation_type": "Referenz Ansatzhöhe Typ",
-  "reference_elevation_qt": "+/- Referenz Ansatzhöhe [m]",
-  "casing_inner_diameter": "Verrohrung Innendurchmesser [mm]",
-  "casing_outer_diameter": "Verrohrung Aussendurchmesser [mm]",
-  "gradation": "Abstufung",
-  "top_bedrock_tvd": "Top Fels TVD [m]",
-  "top_bedrock_tvd_qt": "+/- Top Fels TVD [m]"
+  "yourcomments": "Ihre Kommentare"
 }
