--- a/public/locale/en/common.json
+++ b/public/locale/en/common.json
@@ -7,6 +7,7 @@
   "all": "all",
   "alls": "all",
   "allSelected": "all boreholes selected",
+  "alternate_name": "Alternate name",
   "andzoom": "...and zoom",
   "appearance": "Appearance",
   "appearanceBigMap": "Large Map",
@@ -29,6 +30,8 @@
   "cancel": "Cancel",
   "canton": "Canton",
   "casing": "Casing",
+  "casing_inner_diameter": "Casing inner diameter [mm]",
+  "casing_outer_diameter": "Casing outer diameter [mm]",
   "casingId": "Casing ID",
   "casingName": "Name of casing",
   "centerselected": "center to selected",
@@ -57,7 +60,6 @@
   "deletelayer": "Delete this layer",
   "deletelayerconfirmation": "You are about to delete this layer, how do you want to procede?",
   "deleting": "Deleting {{what}}",
-  "lithological_description": "Lithological description",
   "details": "Details",
   "disable": "Disable",
   "disabled": "Disabled",
@@ -105,6 +107,7 @@
   "exportInProgress": "Export in progress",
   "extendlower": "Extend lower layer to top",
   "extendupper": "Extend upper layer to bottom",
+  "facies_description": "Facies description",
   "filling": "Backfill",
   "filterByHierarchicalUnits": "Filter by hierarchical units",
   "filterbymap": "Filter by map",
@@ -120,6 +123,7 @@
   "fromelevation": "from elevation",
   "fromMeters": "from [m]",
   "german": "German",
+  "gradation": "Gradation",
   "groundwater": "Groundwater",
   "header_borehole": "Borehole editor",
   "header_check": "Pending",
@@ -135,7 +139,7 @@
   "header_viewerdesc": "Search and display",
   "hidden": "Hidden",
   "hideHistory": "Hide history",
-  "hrs": "High reference system",
+  "hrs": "Height reference system",
   "iagree": "I agree",
   "identifierManager": "Manage identifiers",
   "importDate": "Import date",
@@ -163,15 +167,17 @@
   "layer_consistance": "Consistancy",
   "layer_creation_fetch": "Preparing a new layer..",
   "layer_debris": "Debris",
-  "facies_description": "Facies description",
+  "layer_depth": "Layer depth MD [m]",
+  "layer_depth_from": "Top MD [m]",
+  "layer_depth_to": "Base MD [m]",
   "layer_grain_granularity": "Grain angularity",
   "layer_grain_shape": "Grain shape",
   "layer_grain_size_1": "Grain size 1",
   "layer_grain_size_2": "Grain size 2",
   "layer_humidity": "Humidity",
   "layer_last": "End of borehole",
-  "layer_lithology_top_bedrock": "Coarse component lithology",
   "layer_lithology": "Lithology",
+  "layer_lithology_top_bedrock": "Coarse component lithology",
   "layer_lithostratigraphy": "Lithostratigraphy",
   "layer_loading_fetch": "Loading an existing layer..",
   "layer_notes": "Notes",
@@ -185,9 +191,7 @@
   "layer_uscs_3": "USCS 3",
   "layer_uscs_determination": "USCS way of determination",
   "layer_uscs_original": "USCS original classification",
-  "layer_depth": "Layer depth MD [m]",
-  "layer_depth_from": "Top MD [m]",
-  "layer_depth_to": "Base MD [m]",
+  "lithological_description": "Lithological description",
   "lithology_top_bedrock": "Lithology top bedrock",
   "lithostratigraphy_top_bedrock": "Lithostratigraphy top bedrock",
   "load": "Load",
@@ -235,15 +239,17 @@
   "previousVersions": "Previous versions",
   "project_name": "Project name",
   "public": "Public",
-  "alternate_name": "Alternate name",
   "publication": "Publication",
   "publish": "Publish",
   "purpose": "Drilling purpose",
   "qt_bore_inc_dir": "Inclin. / direction precission",
-  "qt_elevation": "+/- Elevation top terrain [m]",
   "qt_depth": "+/- Total depth MD [m]",
+  "qt_elevation": "+/- Elevation top terrain [m]",
   "qt_location": "+/- Coordinates [m]",
   "qt_top_bedrock": "+/- Top bedrock MD [m]",
+  "reference_elevation": "Reference elevation [masl]",
+  "reference_elevation_qt": "+/- Reference elevation [m]",
+  "reference_elevation_type": "Reference elevation type",
   "refresh": "Refresh",
   "reject": "Reject",
   "rejected": "Rejected",
@@ -268,6 +274,7 @@
   "showallfields": "Show all fields",
   "showHistory": "Show history",
   "someSelected": "{{howMany}} boreholes selected",
+  "spud_date": "Spud date",
   "srs": "Spatial reference system",
   "start": "This page is in English.",
   "status": "Status",
@@ -291,6 +298,10 @@
   "toelevation": "to elevation",
   "toMeters": "to [m]",
   "top_bedrock": "Top bedrock MD [m]",
+  "top_bedrock_tvd": "Top bedrock TVD [m]",
+  "top_bedrock_tvd_qt": "+/- Top bedrock TVD [m]",
+  "total_depth_tvd": "Total Depth TVD [m]",
+  "total_depth_tvd_qt": "+/- Total depth TVD [m]",
   "totaldepth": "Total depth MD [m]",
   "type": "Type",
   "updateDate": "Update date",
@@ -308,16 +319,5 @@
   "workgroup": "workgroup",
   "yes": "Yes",
   "you": "You",
-  "yourcomments": "Your comments",
-  "spud_date": "Spud date",
-  "total_depth_tvd": "Total Depth TVD [m]",
-  "total_depth_tvd_qt": "+/- Total depth TVD [m]",
-  "reference_elevation": "Reference elevation [masl]",
-  "reference_elevation_type": "Reference elevation type",
-  "reference_elevation_qt": "+/- Reference Elevation [m]",
-  "casing_inner_diameter": "Casing inner diameter [mm]",
-  "casing_outer_diameter": "Casing outer diameter [mm]",
-  "gradation": "Gradation",
-  "top_bedrock_tvd": "Top bedrock TVD [m]",
-  "top_bedrock_tvd_qt": "+/- Top bedrock TVD [m]"
+  "yourcomments": "Your comments"
 }
