--- a/public/locale/fr/common.json
+++ b/public/locale/fr/common.json
@@ -7,6 +7,7 @@
   "all": "tout",
   "alls": "tous",
   "allSelected": "tous les forages sélectionnés",
+  "alternate_name": "Nom alternatif",
   "andzoom": "...et zoomer",
   "appearance": "Mode de présentation",
   "appearanceBigMap": "Grande carte",
@@ -29,6 +30,8 @@
   "cancel": "Annuler",
   "canton": "Canton",
   "casing": "Tubage",
+  "casing_inner_diameter": "Diamètre intérieur du tubage [mm]",
+  "casing_outer_diameter": "Diamètre extérieur du tubage [mm]",
   "casingId": "Tubage ID",
   "casingName": "Nom du tubage",
   "centerselected": "centrer sur la sélection",
@@ -57,7 +60,6 @@
   "deletelayer": "Supprimer cette couche",
   "deletelayerconfirmation": "Vous êtes sur le point de supprimer cette couche, comment voulez-vous procéder?",
   "deleting": "Suppression de {{what}}",
-  "lithological_description": "Description lithologique",
   "details": "Détails",
   "disable": "Désactiver",
   "disabled": "Désactivé",
@@ -105,6 +107,7 @@
   "exportInProgress": "Exportation en cours",
   "extendlower": "Étendre la couche inférieure jusqu'au sommet",
   "extendupper": "Étendre la couche supérieure à la couche inférieure",
+  "facies_description": "Description du faciès géologique",
   "filling": "Remplissage",
   "filterByHierarchicalUnits": "Filtrer par unités hiérarchiques",
   "filterbymap": "Filtrer à partir de la carte",
@@ -120,6 +123,7 @@
   "fromelevation": "de l'altitude",
   "fromMeters": "de [m]",
   "german": "Allemand",
+  "gradation": "Gradation",
   "groundwater": "Eau souterraine",
   "header_borehole": "Éditeur de forage",
   "header_check": "En cours de modification",
@@ -163,15 +167,17 @@
   "layer_consistance": "Cohérence",
   "layer_creation_fetch": "Créer une nouvelle couche..",
   "layer_debris": "Débris grossiers",
-  "facies_description": "Description du faciès géologique",
+  "layer_depth": "Profondeur de la couche MD [m]",
+  "layer_depth_from": "Top MD [m]",
+  "layer_depth_to": "Base MD [m]",
   "layer_grain_granularity": "Arrondi des grains",
   "layer_grain_shape": "Forme des grains",
   "layer_grain_size_1": "Granulométrie 1",
   "layer_grain_size_2": "Granulométrie 2",
   "layer_humidity": "Humidité",
   "layer_last": "Terminaison du forage",
-  "layer_lithology_top_bedrock": "Lithologie des débris grossiers",
   "layer_lithology": "Lithologie",
+  "layer_lithology_top_bedrock": "Lithologie des débris grossiers",
   "layer_lithostratigraphy": "Lithostratigraphie",
   "layer_loading_fetch": "La couche est en cours de chargement..",
   "layer_notes": "Remarques",
@@ -185,9 +191,7 @@
   "layer_uscs_3": "USCS 3",
   "layer_uscs_determination": "Méthode de détermination USCS",
   "layer_uscs_original": "Classification USCS originale",
-  "layer_depth": "Profondeur de la couche MD [m]",
-  "layer_depth_from": "Top MD [m]",
-  "layer_depth_to": "Base MD [m]",
+  "lithological_description": "Description lithologique",
   "lithology_top_bedrock": "Lithologie du toit du rocher",
   "lithostratigraphy_top_bedrock": "Lithostratigraphie du toit du rocher",
   "load": "Charger",
@@ -235,15 +239,17 @@
   "previousVersions": "Versions précédentes",
   "project_name": "Nom du projet",
   "public": "Public",
-  "alternate_name": "Nom alternatif",
   "publication": "Publication",
   "publish": "Publier",
   "purpose": "But du forage",
   "qt_bore_inc_dir": " Précision de inclin. / direction ",
-  "qt_elevation": "+/- élévation niveau du terrain [m]",
   "qt_depth": "+/- profondeur MD [m]",
+  "qt_elevation": "+/- élévation niveau du terrain [m]",
   "qt_location": "+/- coordonnées [m]",
   "qt_top_bedrock": "+/- Toit du rocher MD [m]",
+  "reference_elevation": "Référence altitudinale [msl]",
+  "reference_elevation_qt": "+/- Référence altitudinale [m]",
+  "reference_elevation_type": "Type référence altitudinale",
   "refresh": "Actualiser",
   "reject": "Refuser",
   "rejected": "Refusé",
@@ -268,6 +274,7 @@
   "showallfields": "Afficher tous les champs",
   "showHistory": "Montrer l'historique",
   "someSelected": "{{howMany}} forages sélectionnés",
+  "spud_date": "Date de début du forage",
   "srs": "Système de cordonnées",
   "start": "Cette page est en français",
   "status": "Statut",
@@ -291,6 +298,10 @@
   "toelevation": "jusqu'à l'altitude",
   "toMeters": "à [m]",
   "top_bedrock": "Toit du rocher MD [m]",
+  "top_bedrock_tvd": "Toit du rocher TVD [m]",
+  "top_bedrock_tvd_qt": "+/- Toit du rocher TVD [m]",
+  "total_depth_tvd": "Profondeur totale TVD [m]",
+  "total_depth_tvd_qt": "+/- Profondeur totale TVD [m]",
   "totaldepth": "Profondeur totale MD [m]",
   "type": "Type",
   "updateDate": "Date de modification",
@@ -308,16 +319,5 @@
   "workgroup": "Groupe de travail",
   "yes": "Oui",
   "you": "Toi",
-  "yourcomments": "Vos commentaires",
-  "spud_date": "Date de début du forage",
-  "total_depth_tvd": "Profondeur totale TVD [m]",
-  "total_depth_tvd_qt": "+/- Profondeur totale TVD [m]",
-  "reference_elevation": "Référence altitudinale [msl]",
-  "reference_elevation_type": "Type référence altitudinale",
-  "reference_elevation_qt": "+/- Référence altitudinale [m]",
-  "casing_inner_diameter": "Diamètre intérieur du tubage [mm]",
-  "casing_outer_diameter": "Diamètre extérieur du tubage [mm]",
-  "gradation": "Gradation",
-  "top_bedrock_tvd": "Toit du rocher TVD [m]",
-  "top_bedrock_tvd_qt": "+/- Toit du rocher TVD [m]"
+  "yourcomments": "Vos commentaires"
 }
