--- a/public/locale/it/common.json
+++ b/public/locale/it/common.json
@@ -7,6 +7,7 @@
   "all": "tutto",
   "alls": "tutti",
   "allSelected": "tutte le perforazioni selezionate",
+  "alternate_name": "Nome alternativo",
   "andzoom": "...e ingrandire",
   "appearance": "Aspetto",
   "appearanceBigMap": "Mappa grande",
@@ -29,6 +30,8 @@
   "cancel": "Annulla",
   "canton": "Cantone",
   "casing": "Tubazione",
+  "casing_inner_diameter": "Diametro interno della tubatura [mm]",
+  "casing_outer_diameter": "Diametro esterno della tubatura [mm]",
   "casingId": "Tubazione ID",
   "casingName": "Nome della tubazione",
   "centerselected": "centra sulla selezione",
@@ -57,7 +60,6 @@
   "deletelayer": "Elimina questo livello",
   "deletelayerconfirmation": "Stai per eliminare questo livello, come vuoi procedere?",
   "deleting": "Eliminazione {{what}}",
-  "lithological_description": "Descrizione litologica",
   "details": "Dettagli",
   "disable": "Disattivare",
   "disabled": "Disattivato",
@@ -105,6 +107,7 @@
   "exportInProgress": "Esportazione in corso",
   "extendlower": "Estendi lo strato inferiore fino alla superficie topografica",
   "extendupper": "Estendere lo strato superiore verso il basso",
+  "facies_description": "Descrizione del facies geologico",
   "filling": "Riempimento",
   "filterByHierarchicalUnits": "Filtrare per unità (gerarchicamente)",
   "filterbymap": "Filtrare con la mappa",
@@ -120,6 +123,7 @@
   "fromelevation": "a partire dalla quota",
   "fromMeters": "da [m]",
   "german": "Tedesco",
+  "gradation": "Graduazione",
   "groundwater": "Falda freatica",
   "header_borehole": "Editore della perforazione",
   "header_check": "In corso di modifica",
@@ -163,15 +167,17 @@
   "layer_consistance": "Consistenza",
   "layer_creation_fetch": "Creazione di un nuovo livello..",
   "layer_debris": "Detriti grossolani",
-  "facies_description": "Descrizione del facies geologico",
+  "layer_depth": "Profondità dello strato MD [m]",
+  "layer_depth_from": "Top MD [m]",
+  "layer_depth_to": "Base MD [m]",
   "layer_grain_granularity": "Angolosità del grano",
   "layer_grain_shape": "Forma dei granuli",
   "layer_grain_size_1": "Granulometria 1",
   "layer_grain_size_2": "Granulometria 2",
   "layer_humidity": "Umidità",
   "layer_last": "Fine della perforazione",
-  "layer_lithology_top_bedrock": "Litologia dei detriti grossolani",
   "layer_lithology": "Litologia",
+  "layer_lithology_top_bedrock": "Litologia dei detriti grossolani",
   "layer_lithostratigraphy": "Litostratigrafia",
   "layer_loading_fetch": "Caricamento strati in corso..",
   "layer_notes": "Note",
@@ -185,9 +191,7 @@
   "layer_uscs_3": "USCS 3",
   "layer_uscs_determination": "Metodo di determinazione USCS",
   "layer_uscs_original": "USCS originale",
-  "layer_depth": "Profondità dello strato MD [m]",
-  "layer_depth_from": "Top MD [m]",
-  "layer_depth_to": "Base MD [m]",
+  "lithological_description": "Descrizione litologica",
   "lithology_top_bedrock": "Top substrato Litologia",
   "lithostratigraphy_top_bedrock": "Litostratigrafia del top del substrato roccioso",
   "load": "Caricare",
@@ -235,15 +239,17 @@
   "previousVersions": "Versioni precedenti",
   "project_name": "Nome progetto",
   "public": "Pubblico",
-  "alternate_name": "Nome alternativo",
   "publication": "Pubblicazione",
   "publish": "Pubblicare",
   "purpose": "Scopo della perforazione",
   "qt_bore_inc_dir": "Qualità inclinazione / direzione",
-  "qt_elevation": "+/- quota livello del terreno [m]",
   "qt_depth": "+/- quota della profondità MD [m]",
+  "qt_elevation": "+/- quota livello del terreno [m]",
   "qt_location": "+/- Coordinate [m]",
   "qt_top_bedrock": "+/- top del substrato roccioso MD [m]",
+  "reference_elevation": "Riferimento della quota [m slm]",
+  "reference_elevation_qt": "+/- riferimento della quota [m]",
+  "reference_elevation_type": "Tipo di riferimento della quota",
   "refresh": "Attualizzare",
   "reject": "Rifiutare",
   "rejected": "Respinto",
@@ -268,6 +274,7 @@
   "showallfields": "Mostra tutti i campi",
   "showHistory": "Mostra la storia",
   "someSelected": "{{howMany}} perforazioni selezionate",
+  "spud_date": "Data d'inizio della perforazione",
   "srs": "Sistema di coordinate",
   "start": "Questa pagina è in italiano",
   "status": "Stato",
@@ -291,6 +298,10 @@
   "toelevation": "fino alla quota",
   "toMeters": "fino a [m]",
   "top_bedrock": "Top substrato MD [m]",
+  "top_bedrock_tvd": "Top substrato TVD [m]",
+  "top_bedrock_tvd_qt": "+/- Top del substrato roccioso TVD [m]",
+  "total_depth_tvd": "Profondità totale TVD [m]",
+  "total_depth_tvd_qt": "+/- profondità totale TVD [m]",
   "totaldepth": "Profondità totale MD [m]",
   "type": "Tipo",
   "updateDate": "Data di aggiornamento",
@@ -308,16 +319,5 @@
   "workgroup": "Gruppo di lavoro",
   "yes": "Sì",
   "you": "Tu",
-  "yourcomments": "Commenti",
-  "spud_date": "Data d'inizio della perforazione",
-  "total_depth_tvd": "Profondità totale TVD [m]",
-  "total_depth_tvd_qt": "+/- profondità totale TVD [m]",
-  "reference_elevation": "Riferimento della quota [m slm]",
-  "reference_elevation_type": "Tipo di riferimento della quota",
-  "reference_elevation_qt": "+/- riferimento della quota [m]",
-  "casing_inner_diameter": "Diametro interno della tubatura [mm]",
-  "casing_outer_diameter": "Diametro esterno della tubatura [mm]",
-  "gradation": "Graduazione",
-  "top_bedrock_tvd": "Top substrato TVD [m]",
-  "top_bedrock_tvd_qt": "+/- Top del substrato roccioso TVD [m]"
+  "yourcomments": "Commenti"
 }
