feat : Add mainCompletion to translation.

--- a/public/locale/de/common.json
+++ b/public/locale/de/common.json
@@ -326,5 +326,5 @@
   "searchFilterCasing": "Suchfilter Verrohrung",
   "searchFilterInstrument": "Suchfilter Instrumentierung",
   "searchFilterFilling": "Suchfilter Hinterfüllung",
-  "“mainCompletion” \"Dies ist der Hauptausbau\"": "Ceci est l’aménagement principale"
+  "mainCompletion": "Dies ist der Hauptausbau"
 }
