--- a/public/locale/fr/common.json
+++ b/public/locale/fr/common.json
@@ -326,5 +326,5 @@
   "searchFilterCasing": "Filtres par tubage",
   "searchFilterInstrument": "Filtres par instrumentation",
   "searchFilterFilling": "Filtres par remplissage",
-  "“mainCompletion” \"Dies ist der Hauptausbau\"": "Questa è l’'installazione principale"
+  "mainCompletion": "Ceci est l’aménagement principale"
 }
