--- a/public/locale/it/common.json
+++ b/public/locale/it/common.json
@@ -326,5 +326,5 @@
   "searchFilterCasing": "Filtri specifici alla tubazione",
   "searchFilterInstrument": "Filtri specifici alla strumentazione",
   "searchFilterFilling": "Filtri specifici al riempimento",
-  "“mainCompletion” \"Dies ist der Hauptausbau\"": "This is the main completion"
+  "mainCompletion": "Questa è l’'installazione principale"
 }
