feat (#60) : Add Export and Import Database to translations.

--- a/public/locale/de/common.json
+++ b/public/locale/de/common.json
@@ -326,5 +326,7 @@
   "searchFilterCasing": "Suchfilter Verrohrung",
   "searchFilterInstrument": "Suchfilter Instrumentierung",
   "searchFilterFilling": "Suchfilter Hinterfüllung",
-  "mainCompletion": "Dies ist der Hauptausbau"
+  "mainCompletion": "Dies ist der Hauptausbau",
+  "ExportDatabase": "Export einer Arbeitsgruppe oder Bohrung in eine gezippte .gpkg-Datei",
+  "ImportDatabase": "Bitte importieren Sie eine gezippte .gpkg-Datei (nur swissforages-Exporte) einer Arbeitsgruppe oder Bohrung."
 }
