feat (#60) : Change spell of translation for Export and Import Database.

--- a/public/locale/de/common.json
+++ b/public/locale/de/common.json
@@ -327,6 +327,6 @@
   "searchFilterInstrument": "Suchfilter Instrumentierung",
   "searchFilterFilling": "Suchfilter Hinterfüllung",
   "mainCompletion": "Dies ist der Hauptausbau",
-  "ExportDatabase": "Export einer Arbeitsgruppe oder Bohrung in eine gezippte .gpkg-Datei",
-  "ImportDatabase": "Bitte importieren Sie eine gezippte .gpkg-Datei (nur swissforages-Exporte) einer Arbeitsgruppe oder Bohrung."
+  "export_database": "Export einer Arbeitsgruppe oder Bohrung in eine gezippte .gpkg-Datei",
+  "import_database": "Bitte importieren Sie eine gezippte .gpkg-Datei (nur swissforages-Exporte) einer Arbeitsgruppe oder Bohrung."
 }
