--- a/public/locale/fr/common.json
+++ b/public/locale/fr/common.json
@@ -327,6 +327,6 @@
   "searchFilterInstrument": "Filtres par instrumentation",
   "searchFilterFilling": "Filtres par remplissage",
   "mainCompletion": "Ceci est l’aménagement principale",
-  "ExportDatabase": "Exporter un groupe de travail ou un forage dans un fichier .gpkg zippé",
-  "ImportDatabase": "Veuillez importer un fichier .gpkg zippé (uniquement sous forme d’exports de swissforages) d'un groupe de travail ou d’un forage."
+  "export_database": "Exporter un groupe de travail ou un forage dans un fichier .gpkg zippé",
+  "import_database": "Veuillez importer un fichier .gpkg zippé (uniquement sous forme d’exports de swissforages) d'un groupe de travail ou d’un forage."
 }
