--- a/public/locale/en/common.json
+++ b/public/locale/en/common.json
@@ -327,6 +327,6 @@
   "searchFilterInstrument": "Instrumentation filters",
   "searchFilterFilling": "Backfill filters",
   "mainCompletion": "This is the main completion",
-  "ExportDatabase": "Export of a workgroup or borehole in a zipped .gpkg file",
-  "ImportDatabase": "Please import a zipped .gpkg file (swissforages exports only) of a workgroup or borehole."
+  "export_database": "Export of a workgroup or borehole in a zipped .gpkg file",
+  "import_database": "Please import a zipped .gpkg file (swissforages exports only) of a workgroup or borehole."
 }
