🌐 updated new translations

--- a/public/locale/it/common.json
+++ b/public/locale/it/common.json
@@ -29,11 +29,11 @@
   "bulkEditing": "Modifica in blocco",
   "cancel": "Annulla",
   "canton": "Cantone",
-  "casing": "Tubazione",
+  "casing": "Installazione ",
   "casing_inner_diameter": "Diametro interno della tubatura [mm]",
   "casing_outer_diameter": "Diametro esterno della tubatura [mm]",
   "casingId": "Tubazione ID",
-  "casingName": "Nome della tubazione",
+  "casingName": "Nome dell'installazione",
   "centerselected": "centra sulla selezione",
   "chronostratigraphy_top_bedrock": "Cronostratigrafia del substrato roccioso",
   "city": "Città/Comune",
@@ -82,26 +82,24 @@
   "enabling": "Attivare {{what}}",
   "english": "Inglese",
   "errorAttention": "Attenzione",
-  "errorEndPoint": "Dovresti aggiungere il punto di arrivo",
+  "errorEndPoint": "Per favore aggiungere il punto finale",
   "errorGap": "C'è una lacuna nella sequenza degli strati",
-  "errorGapSolution1": "Riempi il vuoto con un layer di tipo indefinito",
-  "errorGapSolution2": "Sostituisci la base del layer superiore con la cima del layer inferiore",
-  "errorGapSolution3": "Sostituisci la cima del layer inferiore con 0m",
-  "errorGapSolution4": "Sostituisci la cima del layer inferiore con la base del layer superiore",
-  "errorHowToResolve": "Come risolvere questo problema?",
-  "errorLocked": "Modifica in corso da parte di \"{{user}}\"",
-  "errorMissingBedrock": "Bedrock mancante",
-  "errorMissingBedrockSolution": "Crea automaticamente il bedrock attingendo dai dati inseriti nella pagina del sondaggio.",
+  "errorGapSolution2": "Sostituire lo strato superiore con il top dello strato inferiore",
+  "errorGapSolution3": "Sostituire il top dello strato inferiore con 0 metri",
+  "errorGapSolution4": "Sostituire il top dello strato inferiore con la base dello strato superiore",
+  "errorHowToResolve": "Come si può risolvere questo errore?",
+  "errorLocked": "Modifica della perforazione in corso da parte di {{user}}",
+  "errorMissingBedrock": "Manca la profondità del substrato roccioso",
+  "errorMissingBedrockSolutionv": "Crea automaticamente la profondità del substrato roccioso attingendo dai dati inseriti nella pagina della perforazione",
   "errorMissingLayer": "Strato mancante",
-  "errorMissingLayerSolution": "Per favore riempire lo spazio tra la superficie e il bedrock aggiungendo nuovi layers",
+  "errorMissingLayerSolution": "Per favore riempire la lacuna tra la superficie topografica e il bedrock aggiungendo nuovi strati",
   "errorMoreerror": "{{number}} errori trovati",
   "errorOneerror": "Un errore trovato",
-  "errorOverlap": "Sovrapposizione layers",
-  "errorStartEditing": "Dovresti premere il pulsante di iniziare la modifica",
-  "errorStartWrong": "Il primo layer non inizia dalla superficie",
+  "errorOverlap": "Sovrapposizione di strati",
+  "errorStartWrong": "Il primo strato non inizia dalla riferimento della quota",
   "errorWrongDepth": "Profondità errata",
   "errorWrongDepthSolution1": "La profondità dell'ultimo strato ({{lDepth}}) non coincide con quanto dichiarato nei metadati della perforazione ({{bDepth}}).",
-  "errrorStartPoint": "Dovresti aggiungere il punto di partenza",
+  "errrorStartPoint": "Per favore aggiungere il punto di partenza",
   "expand": "Espandere",
   "export": "Esportare",
   "exportInProgress": "Esportazione in corso",
@@ -118,10 +116,10 @@
   "flowRestart": "Riavviare il workflow",
   "french": "Francese",
   "from": "da",
-  "fromdepth": "dalla profondità [m]",
+  "fromdepth": "dalla profondità [m MD]",
   "fromdiameter": "a partire dal diametro",
   "fromelevation": "a partire dalla quota",
-  "fromMeters": "da [m]",
+  "fromMeters": "da [m MD]",
   "german": "Tedesco",
   "gradation": "Graduazione",
   "groundwater": "Falda freatica",
@@ -145,8 +143,8 @@
   "importDate": "Data di importazione",
   "importedBy": "Importato da",
   "importedData": "Dati importati",
-  "inclination": "Inclinazione (°)",
-  "inclination_direction": "Direzione inclinazione (°)",
+  "inclination": "Inclinazione al punto di perforazione (°)",
+  "inclination_direction": "Direzione inclinazione al punto di perforazione (°)",
   "inProgress": "in corso",
   "instrument": "Strumentazione",
   "instrumentId": "Strumentazione ID",
@@ -243,12 +241,12 @@
   "publish": "Pubblicare",
   "purpose": "Scopo della perforazione",
   "qt_bore_inc_dir": "Qualità inclinazione / direzione",
-  "qt_depth": "+/- quota della profondità MD [m]",
-  "qt_elevation": "+/- quota livello del terreno [m]",
+  "qt_depth": "+/- Quota della profondità MD [m]",
+  "qt_elevation": "+/- Quota livello del terreno [m]",
   "qt_location": "+/- Coordinate [m]",
-  "qt_top_bedrock": "+/- top del substrato roccioso MD [m]",
+  "qt_top_bedrock": "+/- Top del substrato roccioso MD [m]",
   "reference_elevation": "Riferimento della quota [m slm]",
-  "reference_elevation_qt": "+/- riferimento della quota [m]",
+  "reference_elevation_qt": "+/- Riferimento della quota [m]",
   "reference_elevation_type": "Tipo di riferimento della quota",
   "refresh": "Attualizzare",
   "reject": "Rifiutare",
@@ -267,7 +265,7 @@
   "search": "Ricercare",
   "searchfilters": "Filtri di ricerca",
   "searchFiltersBoreholes": "Filtri specifici alla perforazione",
-  "searchFiltersLayers": "Filtri di ricerca della stratigrafia",
+  "searchFiltersLayers": "Filtri specifici alla stratigrafia",
   "setmanually": "Impostare manualmente",
   "show": "Mostra {{what}}",
   "showAll": "Mostra tutti",
@@ -319,5 +317,14 @@
   "workgroup": "Gruppo di lavoro",
   "yes": "Sì",
   "you": "Tu",
-  "yourcomments": "Commenti"
+  "yourcomments": "Commenti",
+  "country": "Stato",
+  "description": "Descrizione",
+  "searchFilterLocation": "Filtri specifici alla posizione",
+  "searchFilterCasing": "Filtri specifici alla tubazione",
+  "searchFilterInstrument": "Filtri specifici alla strumentazione",
+  "searchFilterFilling": "Filtri specifici al riempimento",
+  "mainCompletion": "Questa è l’'installazione principale",
+  "export_database": "Esportazione di un gruppo di lavoro o di una perforazione in un file .gpkg zippato",
+  "import_database": "Per favore importare un file .gpkg zippato (valido unicamente per le esportazioni da swissforages) di un gruppo di lavoro o di una perforazione."
 }
